<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniMobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_login">Login</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="sair">Sair</string>
    <string name="usuarios">Usuários</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sincronizar">Sincronizar</string>

    <!-- Login -->
    <string name="login_txtUsuario">Usuário</string>
    <string name="login_txtSenha">Senha</string>
    <string name="login_btnEntrar">Entrar</string>
    <string name="login_ckbConectado">Manter conectado?</string>

    <!-- Matricula -->
    <string name="matricula_txtEscolhaMatricula">Escolha sua matrícula:</string>
    <string name="matricula_btnMatricula">201113152</string>

    <!-- Menu -->
    <string name="menu_btnTrocarMatricula">Trocar Matrícula</string>
    <string name="menu_btnLogout">Logout</string>
    <string name="menu_btnMatricula">Matrícula</string>
    <string name="menu_btnAvaliacoes">Notas</string>
    <string name="menu_btnDataAvaliacoes">Data Avaliações</string>
    <string name="menu_btnFrequencia">Frequencia</string>
    <string name="menu_btnHorario">Horário</string>

    <!-- Validacaoes -->
    <string name="login_valUsuario">Usuário obrigatório.</string>
    <string name="login_valSenha">Senha obrigatório.</string>
    <string name="campo_obrigatorio">Campo obrigatório.</string>

    <!-- Mensagens -->
    <string name="msg_login_incorreto">Usuário e/ou senha inválido.</string>
    <string name="msg_sem_conexao">Sem conexão com a internet.</string>
    <string name="msg_sem_webservice">Sem conexão com o servidor.</string>
    <string name="msg_erro_sincronismo">Erro no sincronismo.</string>
    <string name="msg_login_em_branco">Usuário obrigatório</string>
    <string name="msg_senha_em_branco">Senha obrigatório.</string>
    <string name="title_activity_cad_usuario">Cadastro de Usuários</string>
    <string name="hello_world">Hello world!</string>
    <string name="mensagem_cadastro">Registro cadastrado com sucesso!</string>
    <string name="mensagem_atualizar">Registro atualizado com sucesso!</string>
    <string name="mensagem_erro">Erro ao salvar!</string>

    <!-- Usuarios -->
    <string name="usuario_txtNome">Nome:</string>
    <string name="usuario_txtLogin">Login:</string>
    <string name="usuario_txtSenha">Senha:</string>
    <string name="lista_usuarios">Lista de usuários</string>
    <string name="title_activity_matricula">Matrícula</string>

    <!-- Notas -->
    <string name="title_activity_notas">Notas</string>

    <!-- Horários -->
    <string name="title_activity_horarios">Horários</string>

    <!-- Avaliações -->
    <string name="title_activity_avaliacao">Avaliações</string>

    <!-- Frequencias -->
    <string name="title_activity_frequencia">Frequência</string>
    <string name="title_activity_teste_main">TesteMain</string>


    </resources>